--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 cookiecutter==2.6.0
+dj-database-url==2.3.0
 Django==5.1.7
 django-browser-reload==1.18.0
 django-tailwind==3.8.0
@@ -14,6 +15,7 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+psycopg2-binary==2.9.10
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
@@ -24,4 +26,5 @@ six==1.17.0
 sqlparse==0.5.3
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20241206
+typing_extensions==4.13.0
 urllib3==2.3.0
