--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,13 @@ dj-database-url==2.3.0
 Django==5.1.7
 django-browser-reload==1.18.0
 django-tailwind==3.8.0
+gunicorn==23.0.0
 idna==3.10
 Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==24.2
 psycopg2-binary==2.9.10
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
